VIEW SERIES - custom scrollbar init added Added title to video player (currently playing season N / episode N) Blocks 'movie-view' & 'series-view' renamed to 'movie-detail' & 'series-detail' respectively according to BEM methodology

--- a/app/view_series.html
+++ b/app/view_series.html
@@ -118,15 +118,6 @@
                                                         <li><a href="#">Season 4</a></li>
                                                         <li><a href="#">Season 5</a></li>
                                                         <li><a href="#">Season 6</a></li>
-                                                        <li><a href="#">Season 7</a></li>
-                                                        <li><a href="#">Season 8</a></li>
-                                                        <li><a href="#">Season 9</a></li>
-                                                        <li><a href="#">Season 10</a></li>
-                                                        <li><a href="#">Season 11</a></li>
-                                                        <li><a href="#">Season 12</a></li>
-                                                        <li><a href="#">Season 13</a></li>
-                                                        <li><a href="#">Season 14</a></li>
-                                                        <li><a href="#">Season 15</a></li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -218,6 +209,10 @@
         <div class="container" id="watch">
             <div class="columns">
                 <div class="single-column">
+
+                    <div class="video-player-title">
+                        <h3>[Season 2 / episode 3] <span class="text-gray">Lorem ipsum dolor sitamet</span></h3>
+                    </div>
 
                     <video id="bumbu-player" class="video-js vjs-big-play-centered vjs-bumbu-skin" width="980"
                            height="400">
