Screenshots were added

--- a/app/view_series.html
+++ b/app/view_series.html
@@ -210,7 +210,7 @@
             <div class="columns">
                 <div class="single-column">
 
-                    <div class="video-player-title">
+                    <div class="video-player__title">
                         <h3>[Season 2 / episode 3] <span class="text-gray">Lorem ipsum dolor sitamet</span></h3>
                     </div>
 
